--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html class="no-js" lang="zxx">
+<html class="no-js" lang="en">
 <head>
     <!-- Mobile Specific Meta -->
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <!-- Favicon-->
-    <link href="img/fav.png" rel="shortcut icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
     <!-- Author Meta -->
-    <meta content="Colorlib" name="author">
+    <meta content="FUHSD Gives" name="author">
     <!-- Meta Description -->
     <meta content="" name="description">
     <!-- Meta Keyword -->
@@ -75,7 +79,7 @@
 <section class="callto-area relative">
     <div class="container">
         <div class="row d-flex callto-wrap justify-content-between pt-40 pb-40">
-            <h3 class="text-white">Please Help them and Donate now</h3>
+            <h3 class="text-white">Help out those in need in Your Community</h3>
             <a class="head-btn head-btn2 btn text-uppercase" href="#">Donate Now</a>
         </div>
     </div>
@@ -90,8 +94,8 @@
             <div class="col-md-8 pb-80 header-text">
                 <h1>Waiting for Help</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br>
-                    labore et dolore magna aliqua.
+                    Coronavirus disease 2019 (COVID-19) is an infectious disease. Write the mission statement here. Talk about impact to the
+                    less fortunate. Talk about food and social workers. This is a place to explain why helping matters.
                 </p>
             </div>
         </div>
@@ -323,11 +327,13 @@
                         <div class="col-lg-6 d-flex flex-column">
                             <input class="form-control mt-20" name="email"
                                    onblur="this.placeholder = 'Enter email address'"
-                                   onfocus="this.placeholder = ''" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
+                                   onfocus="this.placeholder = ''"
+                                   pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
                                    placeholder="Enter email address" required="" type="email">
                         </div>
                         <div class="col-lg-12 d-flex flex-column">
-                            <input class="form-control mt-20" name="amound" onblur="this.placeholder = 'Donation amount (USD)'"
+                            <input class="form-control mt-20" name="amound"
+                                   onblur="this.placeholder = 'Donation amount (USD)'"
                                    onfocus="this.placeholder = ''" placeholder="Donation amount (USD)"
                                    required="" type="text">
 
@@ -373,10 +379,11 @@
             <p class="footer-text m-0">
                 Copyright &copy;<script>document.write(new Date().getFullYear());</script>
                 All rights reserved | Made with <i aria-hidden="true" class="fa fa-heart-o"></i> by <a
-                    href="./" target="_blank">FUHSD Gives</a>
+                    href="./" target="_blank" rel="noopener">FUHSD Gives</a>
             </p>
             <p class="footer-text mt-1 mb-0">
-                PioneerHacks III is a partner of EnactOurDreams, a 501(c)(3) nonprofit handling our finances.
+                PioneerHacks III is a partner of <a
+                    href="https://www.enactourdreams.org/" target="_blank" rel="noopener">EnactOurDreams</a>, a 501(c)(3) nonprofit handling our finances.
             </p>
         </div>
     </div>
