updated nonprofit link

--- a/index.html
+++ b/index.html
@@ -382,8 +382,8 @@
                     href="./" target="_blank" rel="noopener">FUHSD Gives</a>
             </p>
             <p class="footer-text mt-1 mb-0">
-                PioneerHacks III is a partner of <a
-                    href="https://www.enactourdreams.org/" target="_blank" rel="noopener">EnactOurDreams</a>, a 501(c)(3) nonprofit handling our finances.
+                This organization is a partner of <a
+                    href="http://www.bayecho.org/" target="_blank" rel="noopener">BayEcho</a>, a 501(c)(3) nonprofit handling our finances.
             </p>
         </div>
     </div>
