added some forms

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142125117-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'UA-142125117-2');
+    </script>
+
     <!-- Mobile Specific Meta -->
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <!-- Favicon-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+    <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+    <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+    <link href="/site.webmanifest" rel="manifest">
 
     <!-- Author Meta -->
     <meta content="FUHSD Gives" name="author">
@@ -94,7 +108,8 @@
             <div class="col-md-8 pb-80 header-text">
                 <h1>Waiting for Help</h1>
                 <p>
-                    Coronavirus disease 2019 (COVID-19) is an infectious disease. Write the mission statement here. Talk about impact to the
+                    Coronavirus disease 2019 (COVID-19) is an infectious disease. Write the mission statement here. Talk
+                    about impact to the
                     less fortunate. Talk about food and social workers. This is a place to explain why helping matters.
                 </p>
             </div>
@@ -188,86 +203,86 @@
 <!-- End about Area -->
 
 <!-- Start volunteer Area -->
-<section class="volunteer-area section-gap">
-    <div class="container">
-        <div class="row d-flex justify-content-center">
-            <div class="col-md-8 pb-80 header-text">
-                <h1>Our Volunteers</h1>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br>
-                    labore et dolore magna aliqua.
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-3 col-md-3 vol-wrap">
-                <div class="single-vol">
-                    <div class="content">
-                        <a href="#" target="_blank">
-                            <div class="content-overlay"></div>
-                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v1.jpg">
-                            <div class="content-details fadeIn-bottom">
-                                <h4>Andy Florence</h4>
-                                <p>
-                                    inappropriate behavior
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 vol-wrap">
-                <div class="single-vol">
-                    <div class="content">
-                        <a href="#" target="_blank">
-                            <div class="content-overlay"></div>
-                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v2.jpg">
-                            <div class="content-details fadeIn-bottom">
-                                <h4>Andy Florence</h4>
-                                <p>
-                                    inappropriate behavior
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 vol-wrap">
-                <div class="single-vol">
-                    <div class="content">
-                        <a href="#" target="_blank">
-                            <div class="content-overlay"></div>
-                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v3.jpg">
-                            <div class="content-details fadeIn-bottom">
-                                <h4>Andy Florence</h4>
-                                <p>
-                                    inappropriate behavior
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-3 vol-wrap">
-                <div class="single-vol">
-                    <div class="content">
-                        <a href="#" target="_blank">
-                            <div class="content-overlay"></div>
-                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v4.jpg">
-                            <div class="content-details fadeIn-bottom">
-                                <h4>Andy Florence</h4>
-                                <p>
-                                    inappropriate behavior
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
+<!--<section class="volunteer-area section-gap">-->
+<!--    <div class="container">-->
+<!--        <div class="row d-flex justify-content-center">-->
+<!--            <div class="col-md-8 pb-80 header-text">-->
+<!--                <h1>Our Volunteers</h1>-->
+<!--                <p>-->
+<!--                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br>-->
+<!--                    labore et dolore magna aliqua.-->
+<!--                </p>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="row">-->
+<!--            <div class="col-lg-3 col-md-3 vol-wrap">-->
+<!--                <div class="single-vol">-->
+<!--                    <div class="content">-->
+<!--                        <a href="#" target="_blank">-->
+<!--                            <div class="content-overlay"></div>-->
+<!--                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v1.jpg">-->
+<!--                            <div class="content-details fadeIn-bottom">-->
+<!--                                <h4>Andy Florence</h4>-->
+<!--                                <p>-->
+<!--                                    inappropriate behavior-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-lg-3 col-md-3 vol-wrap">-->
+<!--                <div class="single-vol">-->
+<!--                    <div class="content">-->
+<!--                        <a href="#" target="_blank">-->
+<!--                            <div class="content-overlay"></div>-->
+<!--                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v2.jpg">-->
+<!--                            <div class="content-details fadeIn-bottom">-->
+<!--                                <h4>Andy Florence</h4>-->
+<!--                                <p>-->
+<!--                                    inappropriate behavior-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-lg-3 col-md-3 vol-wrap">-->
+<!--                <div class="single-vol">-->
+<!--                    <div class="content">-->
+<!--                        <a href="#" target="_blank">-->
+<!--                            <div class="content-overlay"></div>-->
+<!--                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v3.jpg">-->
+<!--                            <div class="content-details fadeIn-bottom">-->
+<!--                                <h4>Andy Florence</h4>-->
+<!--                                <p>-->
+<!--                                    inappropriate behavior-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-lg-3 col-md-3 vol-wrap">-->
+<!--                <div class="single-vol">-->
+<!--                    <div class="content">-->
+<!--                        <a href="#" target="_blank">-->
+<!--                            <div class="content-overlay"></div>-->
+<!--                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v4.jpg">-->
+<!--                            <div class="content-details fadeIn-bottom">-->
+<!--                                <h4>Andy Florence</h4>-->
+<!--                                <p>-->
+<!--                                    inappropriate behavior-->
+<!--                                </p>-->
+<!--                            </div>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
 
-        </div>
-    </div>
-</section>
+<!--        </div>-->
+<!--    </div>-->
+<!--</section>-->
 <!-- End volunteer Area -->
 
 
@@ -307,52 +322,27 @@
                         conduct women face higher conduct.
                     </p>
                 </div>
+                <script paypalExpress="false" src="https://donorbox.org/widget.js"></script>
+                <div class="force-scroll not-mobile">
+                    <iframe frameborder="0" name="donorbox" scrolling="no" seamless="seamless"
+                            src="https://donorbox.org/embed/fuhsdgives?only_donor_wall=true"
+                            style="width: 100%; max-width:500px; min-width:310px; max-height: none !important"></iframe>
+                </div>
             </div>
             <div class="col-lg-6 contact-right">
-                <form action="donate.php" class="booking-form" id="myForm">
-                    <div class="row">
-                        <div class="col-lg-12 d-flex flex-column">
-                            <select class="app-select form-control" name="type" required>
-                                <option data-display="Project you want to donate">Project you want to donate</option>
-                                <option value="1">Donate type 1</option>
-                                <option value="2">Donate type 2</option>
-                                <option value="3">Donate type 3</option>
-                            </select>
-                        </div>
-                        <div class="col-lg-6 d-flex flex-column">
-                            <input class="form-control mt-20" name="fname" onblur="this.placeholder = 'Enter your name'"
-                                   onfocus="this.placeholder = ''" placeholder="Enter your name" required=""
-                                   required type="text">
-                        </div>
-                        <div class="col-lg-6 d-flex flex-column">
-                            <input class="form-control mt-20" name="email"
-                                   onblur="this.placeholder = 'Enter email address'"
-                                   onfocus="this.placeholder = ''"
-                                   pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$"
-                                   placeholder="Enter email address" required="" type="email">
-                        </div>
-                        <div class="col-lg-12 d-flex flex-column">
-                            <input class="form-control mt-20" name="amound"
-                                   onblur="this.placeholder = 'Donation amount (USD)'"
-                                   onfocus="this.placeholder = ''" placeholder="Donation amount (USD)"
-                                   required="" type="text">
-
-                            <textarea class="form-control mt-20" name="message" onblur="this.placeholder = 'Messege'"
-                                      onfocus="this.placeholder = ''" placeholder="Messege"
-                                      required=""></textarea>
-                        </div>
-
-                        <div class="col-lg-12 d-flex justify-content-end send-btn">
-                            <button class="submit-btn primary-btn mt-20 text-uppercase ">donate<span
-                                    class="lnr lnr-arrow-right"></span></button>
-                        </div>
-
-                        <div class="alert-msg"></div>
-                    </div>
-                </form>
+                <script paypalExpress="false" src="https://donorbox.org/widget.js"></script>
+                <iframe allowpaymentrequest="" frameborder="0" height="900px" name="donorbox" scrolling="no"
+                        seamless="seamless" src="https://donorbox.org/embed/fuhsdgives"
+                        style="max-width: 500px; min-width: 310px; max-height:none!important" width="100%"></iframe>
                 <p class="payment-method">
-                    We Accept : <img alt="" src="img/payment.png">
+                    We Accept : <img alt="Visa, Mastercard, American Express, Discover" height="29"
+                                     src="img/payment.png">
                 </p>
+                <div class="force-scroll only-mobile">
+                    <iframe frameborder="0" name="donorbox" scrolling="no" seamless="seamless"
+                            src="https://donorbox.org/embed/fuhsdgives?only_donor_wall=true"
+                            style="width: 100%; max-width:500px; min-width:310px; max-height: none !important"></iframe>
+                </div>
             </div>
         </div>
     </div>
@@ -379,11 +369,12 @@
             <p class="footer-text m-0">
                 Copyright &copy;<script>document.write(new Date().getFullYear());</script>
                 All rights reserved | Made with <i aria-hidden="true" class="fa fa-heart-o"></i> by <a
-                    href="./" target="_blank" rel="noopener">FUHSD Gives</a>
+                    href="./" rel="noopener" target="_blank">FUHSD Gives</a>
             </p>
             <p class="footer-text mt-1 mb-0">
                 This organization is a partner of <a
-                    href="http://www.bayecho.org/" target="_blank" rel="noopener">BayEcho</a>, a 501(c)(3) nonprofit handling our finances.
+                    href="http://www.bayecho.org/" rel="noopener" target="_blank">BayEcho</a>, a 501(c)(3) nonprofit
+                handling our finances.
             </p>
         </div>
     </div>
