lowered res of payment image

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                         style="max-width: 500px; min-width: 310px; max-height:none!important" width="100%"></iframe>
                 <p class="payment-method">
                     We Accept : <img alt="Visa, Mastercard, American Express, Discover" height="29"
-                                     src="img/payment.png">
+                                     src="img/payment-sm.png">
                 </p>
                 <div class="force-scroll only-mobile">
                     <iframe frameborder="0" name="donorbox" scrolling="no" seamless="seamless"
