--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>Charity</title>
+    <title>FUHSD Gives - Give Back to the Community</title>
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
     <!--
