--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
 <!-- End project Area -->
 
 <!-- Start about Area -->
-<section class="about-area" id="about">
+<section class="about-area" style="position: relative">
+    <div class="target-div" id="about" style="position: absolute"></div>
     <div class="container-fluid">
         <div class="row d-flex justify-content-end align-items-center">
             <div class="col-lg-6 col-md-12 about-left no-padding">
