ADDED TEXT TO SITE

--- a/index.html
+++ b/index.html
@@ -26,9 +26,10 @@
     <!-- Author Meta -->
     <meta content="FUHSD Gives" name="author">
     <!-- Meta Description -->
-    <meta content="" name="description">
+    <meta content="FUHSD Gives strive to support organizations and businesses in need of financial assistance due to the COVID-19 pandemic together as a FUHSD community. "
+          name="description">
     <!-- Meta Keyword -->
-    <meta content="" name="keywords">
+    <meta content="FUHSD, Covid, coronavirus, charity, donation, community" name="keywords">
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
@@ -111,11 +112,11 @@
     <div class="container">
         <div class="row d-flex justify-content-center">
             <div class="col-md-8 pb-50 header-text">
-                <h1>Waiting for Help</h1>
+                <h1>We Need Your Help!</h1>
                 <p>
-                    Coronavirus disease 2019 (COVID-19) is an infectious disease. Write the mission statement here. Talk
-                    about impact to the
-                    less fortunate. Talk about food and social workers. This is a place to explain why helping matters.
+                    Because of COVID-19, our lives are drastically different. Hospitals are desperate for medical
+                    supplies, millions of people have lost their jobs, and vulnerable families are at risk more than
+                    ever. The time to act is now. Read below to learn about how your donation makes a difference.
                 </p>
             </div>
         </div>
@@ -133,9 +134,9 @@
                     </div>
                 </div>
                 <div class="details">
-                    <a href="#"><h2>Easy Flight Search</h2></a>
-                    <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                        women face higher conduct.</p>
+                    <a href="#"><h2>Medical Supplies</h2></a>
+                    <p>Hospitals are rapidly running out of supplies. Direct Relief is coordinating with businesses to
+                        provide personal protective equipment to health workers.</p>
                     <a class="text-uppercase" href="#">read more</a>
                 </div>
 
@@ -153,9 +154,9 @@
                     </div>
                 </div>
                 <div class="details">
-                    <a href="#"><h2>Easy Flight Search</h2></a>
-                    <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                        women face higher conduct.</p>
+                    <a href="#"><h2>Local Community Services</h2></a>
+                    <p>Low income families, the homeless, and seniors rely on food banks to provide meals on a daily
+                        basis. Food banks are an essential part of our community.</p>
                     <a class="text-uppercase" href="#">read more</a>
                 </div>
             </div>
@@ -172,9 +173,9 @@
                     </div>
                 </div>
                 <div class="details">
-                    <a href="#"><h2>Easy Flight Search</h2></a>
-                    <p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                        women face higher conduct.</p>
+                    <a href="#"><h2>COVID-19 Response Funds</h2></a>
+                    <p>The World Health Organization and CDC Foundation work to track and understand the spread of the
+                        virus to ensure patients get the care they need.</p>
                     <a class="text-uppercase" href="#">read more</a>
                 </div>
             </div>
@@ -193,12 +194,13 @@
                 <img alt="" class="img-fluid" src="img/about-img.jpg">
             </div>
             <div class="col-lg-6 col-md-12 about-right">
-                <h1>A very Lovely Welcome <br>
-                    to our Company</h1>
+                <h1>Together, We Can <br>
+                    Make A Difference</h1>
                 <p>
-                    inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-                    standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the
-                    job is beyond reproach. inappropriate behavior is often laughed.
+                    We strive to support organizations and businesses in need of financial assistance due to the
+                    COVID-19 pandemic together, as a FUHSD community. As residents of Santa Clara County, our lives have
+                    been changed drastically by the novel coronavirus. But, we can fight this pandemic together as a
+                    community.
                 </p>
                 <button class="primary-btn mt-20 text-uppercase ">learn more<span class="lnr lnr-arrow-right"></span>
                 </button>
@@ -206,91 +208,6 @@
         </div>
     </div>
 </section>
-<!-- End about Area -->
-
-<!-- Start volunteer Area -->
-<!--<section class="volunteer-area section-gap">-->
-<!--    <div class="container">-->
-<!--        <div class="row d-flex justify-content-center">-->
-<!--            <div class="col-md-8 pb-80 header-text">-->
-<!--                <h1>Our Volunteers</h1>-->
-<!--                <p>-->
-<!--                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br>-->
-<!--                    labore et dolore magna aliqua.-->
-<!--                </p>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--        <div class="row">-->
-<!--            <div class="col-lg-3 col-md-3 vol-wrap">-->
-<!--                <div class="single-vol">-->
-<!--                    <div class="content">-->
-<!--                        <a href="#" target="_blank">-->
-<!--                            <div class="content-overlay"></div>-->
-<!--                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v1.jpg">-->
-<!--                            <div class="content-details fadeIn-bottom">-->
-<!--                                <h4>Andy Florence</h4>-->
-<!--                                <p>-->
-<!--                                    inappropriate behavior-->
-<!--                                </p>-->
-<!--                            </div>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-lg-3 col-md-3 vol-wrap">-->
-<!--                <div class="single-vol">-->
-<!--                    <div class="content">-->
-<!--                        <a href="#" target="_blank">-->
-<!--                            <div class="content-overlay"></div>-->
-<!--                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v2.jpg">-->
-<!--                            <div class="content-details fadeIn-bottom">-->
-<!--                                <h4>Andy Florence</h4>-->
-<!--                                <p>-->
-<!--                                    inappropriate behavior-->
-<!--                                </p>-->
-<!--                            </div>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-lg-3 col-md-3 vol-wrap">-->
-<!--                <div class="single-vol">-->
-<!--                    <div class="content">-->
-<!--                        <a href="#" target="_blank">-->
-<!--                            <div class="content-overlay"></div>-->
-<!--                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v3.jpg">-->
-<!--                            <div class="content-details fadeIn-bottom">-->
-<!--                                <h4>Andy Florence</h4>-->
-<!--                                <p>-->
-<!--                                    inappropriate behavior-->
-<!--                                </p>-->
-<!--                            </div>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-lg-3 col-md-3 vol-wrap">-->
-<!--                <div class="single-vol">-->
-<!--                    <div class="content">-->
-<!--                        <a href="#" target="_blank">-->
-<!--                            <div class="content-overlay"></div>-->
-<!--                            <img alt="" class="content-image img-fluid d-block mx-auto" src="img/v4.jpg">-->
-<!--                            <div class="content-details fadeIn-bottom">-->
-<!--                                <h4>Andy Florence</h4>-->
-<!--                                <p>-->
-<!--                                    inappropriate behavior-->
-<!--                                </p>-->
-<!--                            </div>-->
-<!--                        </a>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--        </div>-->
-<!--    </div>-->
-<!--</section>-->
-<!-- End volunteer Area -->
-
 
 <!-- Start donate Area -->
 <section class="donate-area relative section-gap" id="donate">
@@ -300,32 +217,32 @@
             <div class="col-lg-6 col-sm-12 pb-50 header-text">
                 <h1>Donate Now</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br> tempor incididunt ut
-                    labore et dolore magna aliqua.
+                    Your donation makes a difference! Contribute to the COVID-19 emergency relief efforts by making a
+                    tax-deductible donation today.
                 </p>
             </div>
         </div>
         <div class="row d-flex justify-content-center">
             <div class="col-lg-6 contact-left">
                 <div class="single-info">
-                    <h4>Divided Evenly</h4>
+                    <h4>Tax-Deductible Donations</h4>
                     <p>
-                        inappropriate behavior is often laughed off as “boys will be boys,” <br> women face higher
-                        conduct women face higher conduct.
+                        All donations are tax-deductible! We have partnered with BayEcho, a 501(c)(3) nonprofit, to make
+                        this possible; the EIN will be on the receipt.
                     </p>
                 </div>
                 <div class="single-info">
-                    <h4>Transperancy All the Way</h4>
+                    <h4>Complete Transparency</h4>
                     <p>
-                        inappropriate behavior is often laughed off as “boys will be boys,” <br> women face higher
-                        conduct women face higher conduct.
+                        All donations to charities will be documented and public at all times here! Email us at
+                        fuhsdgives@gmail.com if you’d like to suggest a charity.
                     </p>
                 </div>
                 <div class="single-info">
-                    <h4>Trustworthy</h4>
+                    <h4>Student-Run</h4>
                     <p>
-                        inappropriate behavior is often laughed off as “boys will be boys,” <br> women face higher
-                        conduct women face higher conduct.
+                        We, FUHSD Gives, are students from all across the FUHSD district who want to make a meaningful
+                        impact. Email us at fuhsdgives@gmail.com if you have any questions!
                     </p>
                 </div>
                 <script paypalExpress="false" src="https://donorbox.org/widget.js"></script>
