--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <a href="#"><h2>Medical Supplies</h2></a>
                     <p>Hospitals are rapidly running out of supplies. Direct Relief is coordinating with businesses to
                         provide personal protective equipment to health workers.</p>
-                    <a class="text-uppercase" href="#">read more</a>
+                    <a class="text-uppercase" href="#modal-medsup">read more</a>
                 </div>
 
             </div>
