--- a/index.html
+++ b/index.html
@@ -284,10 +284,10 @@
                 <li><a href="#donate">Donate</a></li>
             </ul>
             <div class="footer-social">
-                <a href="#"><i class="fa fa-facebook"></i></a>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-dribbble"></i></a>
-                <a href="#"><i class="fa fa-behance"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+                <a href="#"><i class="fa fa-facebook-f"></i></a>
+                <a href="#"><i class="fa fa-envelope"></i></a>
+                <a href=""><i class="fa fa-phone fa-flip-horizontal"></i></a>
             </div>
             <p class="footer-text m-0" id="copyright">
 
