--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <h1>Donate Now</h1>
                 <p>
                     Your donation makes a difference! Contribute to the COVID-19 emergency relief efforts by making a
-                    tax-deductible donation today.
+                    <b style="color: black">tax-deductible</b> donation today.
                 </p>
             </div>
         </div>
@@ -235,14 +235,16 @@
                     <h4>Complete Transparency</h4>
                     <p>
                         All donations to charities will be documented and public at all times here! Email us at
-                        fuhsdgives@gmail.com if you’d like to suggest a charity.
+                        <a href="mailto:fuhsdgives@gmail.com">fuhsdgives@gmail.com</a> if you’d like to suggest a
+                        charity.
                     </p>
                 </div>
                 <div class="single-info">
                     <h4>Student-Run</h4>
                     <p>
                         We, FUHSD Gives, are students from all across the FUHSD district who want to make a meaningful
-                        impact. Email us at fuhsdgives@gmail.com if you have any questions!
+                        impact. Email us at <a href="mailto:fuhsdgives@gmail.com">fuhsdgives@gmail.com</a> if you have
+                        any questions!
                     </p>
                 </div>
                 <script paypalExpress="false" src="https://donorbox.org/widget.js"></script>
@@ -284,10 +286,11 @@
                 <li><a href="#donate">Donate</a></li>
             </ul>
             <div class="footer-social">
-                <a href="#"><i class="fa fa-instagram"></i></a>
-                <a href="#"><i class="fa fa-facebook-f"></i></a>
-                <a href="#"><i class="fa fa-envelope"></i></a>
-                <a href=""><i class="fa fa-phone fa-flip-horizontal"></i></a>
+                <a href="https://www.instagram.com/fuhsdgives/" rel="noopener" target="_blank"><i
+                        class="fa fa-instagram"></i></a>
+                <a href="#0"><i class="fa fa-facebook-f"></i></a>
+                <a href="mailto:fuhsdgives@gmail.com"><i class="fa fa-envelope"></i></a>
+                <a href="#0"><i class="fa fa-phone fa-flip-horizontal"></i></a>
             </div>
             <p class="footer-text m-0" id="copyright">
 
@@ -303,6 +306,7 @@
 <!-- End footer Area -->
 
 <script src="js/vendor/jquery-2.2.4.min.js"></script>
+
 <script crossorigin="anonymous"
         integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
         src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
