fixed some sticky issues :((

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 </head>
 <body>
 
+<div style="height: 48px" id="tmpSticky"></div>
+
 <!-- Start Header Area -->
 <header class="default-header">
     <div class="container">
